fixed: lineup card text visibility fixed (text-box added).

--- a/src/pages/home/lineup.css
+++ b/src/pages/home/lineup.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 110vh;
+    height: 90vh;
     scroll-snap-align: start;
 }
 
@@ -40,12 +40,23 @@
     z-index: 12;
 }
 
-.card p{
-    font-size: 0.85rem;
-    font-weight: 400;
-    margin-top: 25rem;
-    z-index: 15;
-    color: black;
+
+.text-box {
+    text-align: start;
+    background-color: #ffffff; 
+    padding: 15px; 
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); 
+    color: #333333; 
+    font-size: 0.85rem; 
+    font-weight: 600;
+    line-height: 1.5; 
+    width: 70%; 
+    word-wrap: break-word; 
+    position: absolute; 
+    z-index: 220;
+    bottom: -1.5rem; 
+    left: 65%; 
+    transform: translateX(-50%); 
 }
 
 
